--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
+<!-- <%= form_tag posts_path do %>
 <h3>Post Form</h3>
 <form action="<%= posts_path %>" method="POST">
     <label>Post title:</label><br>
@@ -5,7 +6,17 @@
     <label>Post description</label><br>
     <textarea name="post[description]" id="post_description" cols="30" rows="10"></textarea>
 
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
     <input type="submit" value="Submit Post">
-</form>
-
-<%= params.inspect %>
+    <%end%>
+</form> -->
+<h3>Post Form</h3>
+<%= form_tag posts_path do %>
+    <label>Post title:</label><br>
+    <%= text_field_tag :'post[title]' %><br>
+   
+    <label>Post description:</label><br>
+    <%= text_area_tag :'post[description]' %><br>
+   
+    <%= submit_tag "Submit Post" %>
+  <% end %>
